--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="col-sm-8">
       <h2 id="logo">Imagen vectorial SVG</h2>
       <h5>Tarea de evaluación de SVG, 12/01/2021</h5>
-          <svg xmlns="http://www.w3.org/2000/svg" 
+        <svg xmlns="http://www.w3.org/2000/svg" 
          xmlns:xlink="http//www.w3.org/1999/xlink" 
          version="1.1"
          width="300" heigth="300"
@@ -82,7 +82,7 @@
               Teaching Sun</text>    
          </svg>
       <p>Imagen SVG</p>
-      <p>Como temática de este logo se ha escogido el Sol, por su representatividad como factor iluminador en la vida y la posibilidad de emplearlo como metáfora educativa. 
+      <p>Como temática de este logo se ha escogido el Sol por su representatividad como factor iluminador en la vida y la posibilidad de emplearlo como metáfora educativa. 
         En lo referente a los colores empleados, la combinación azul-naraja aporta un toque llamativo y atractivo.</p>
       <br>
       <h2>TITLE HEADING</h2>
