--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="col-sm-4">
       <h2>Acerca de mí</h2>
       <h5>Foto de perfil</h5>
-      <img src="./img/foto.jpg">
+      <img src=".\img\foto.jpg">
       <p>Estudiante de 1º de ASIR-B</p>
       <h3>Links de interés</h3>
       <ul class="nav nav-pills flex-column">
