--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
          width="300" heigth="300"
          baseProfile="full"
          viewBox="-0 -0 180 180">
-            <circle cx="0" cy="0" r="90" style="opacity:1"; fill="blue"/>
-            <circle cx="0" cy="0" r="75" style="opacity:1"; fill="orange"; stroke="red"/>
+            <circle cx="0" cy="0" r="90" style="opacity:"1"; fill="blue"/>
+            <circle cx="0" cy="0" r="75" style="opacity:"1"; fill="orange"; stroke="red"/>
             <line x1="160"    y1="100"    x2="-150"    y2="-100"    style="stroke:blue"/>
             <line x1="140"    y1="100"    x2="-150"    y2="-100"    style="stroke:red"/>
             <line x1="120"    y1="100"    x2="-150"    y2="-100"    style="stroke:blue"/>
