--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
     <div class="col-sm-8">
       <h2 id="logo">Imagen vectorial SVG</h2>
       <h5>Tarea de evaluación de SVG, 12/01/2021</h5>
-        <svg xmlns="http://www.w3.org/2000/svg" 
-         xmlns:xlink="http//www.w3.org/1999/xlink" 
-         version="1.1"
-         width="300" heigth="300"
-         baseProfile="full"
-         viewBox="-0 -0 180 180">
-            <circle cx="0" cy="0" r="90" style="opacity:1"; fill="blue"/>
-            <circle cx="0" cy="0" r="75" style="opacity:1"; fill="orange"; stroke="red"/>
-            <line x1="160"    y1="100"    x2="-150"    y2="-100"    style="stroke:blue"/>
-            <line x1="140"    y1="100"    x2="-150"    y2="-100"    style="stroke:red"/>
-            <line x1="120"    y1="100"    x2="-150"    y2="-100"    style="stroke:blue"/>
-            <text x="75" y="75" transform=*/ font-family="Arial" font-size="10px">
-              <animateTransform attributeName="transform" begin="0s" dur="5s" type="translate" from="-90 30" to="90 30" repeatCount="indefinite"/>
-              Teaching Sun</text>    
-         </svg>
+       <svg xmlns="http://www.w3.org/2000/svg" 
+           xmlns:xlink="http//www.w3.org/1999/xlink" 
+           version="1.1"
+           width="300" heigth="300"
+           baseProfile="full"
+           viewBox="-0 -0 180 180">
+              <circle cx="0" cy="0" r="90" style="opacity:1;" fill="blue"/>
+              <circle cx="0" cy="0" r="75" style="opacity:1;" fill="orange" stroke="red"/>
+              <line x1="160"    y1="100"    x2="-150"    y2="-100"    style="stroke:blue;"/>
+              <line x1="140"    y1="100"    x2="-150"    y2="-100"    style="stroke:red;"/>
+              <line x1="120"    y1="100"    x2="-150"    y2="-100"    style="stroke:blue;"/>
+              <text x="75" y="75"  font-family="Arial" font-size="10px" transform="*\">
+                 <animateTransform attributeName="transform" begin="0s" dur="5s" type="translate" from="-90 30" to="90 30" repeatCount="indefinite"/>
+                 Teaching Sun</text>    
+       </svg>
       <p>Imagen SVG</p>
       <p>Como temática de este logo se ha escogido el Sol por su representatividad como factor iluminador en la vida y la posibilidad de emplearlo como metáfora educativa. 
         En lo referente a los colores empleados, la combinación azul-naraja aporta un toque llamativo y atractivo.</p>
