--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                  Teaching Sun</text>    
        </svg>
       <p>Imagen SVG</p>
-      <p>Como temática de este logo se ha escogido el Sol, estructurando el svg para que solo se aprecie un quarto del mismo, por su representatividad 
+      <p>Como temática de este logo se ha escogido el Sol, estructurando el svg para que solo se aprecie un cuarto del mismo, por su representatividad 
         como factor iluminador en la vida y la posibilidad de emplearlo como metáfora educativa. 
         En lo referente a los colores empleados, la combinación azul-naraja aporta un toque llamativo y atractivo.</p>
       <br>
