--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         como factor iluminador en la vida y la posibilidad de emplearlo como metáfora educativa. 
         En lo referente a los colores empleados, la combinación azul-naraja aporta un toque llamativo y atractivo.</p>
       <br>
-      <h2>Imagen svg</h2>
-      <h5 id=inkscape>Primer uso de Inkscape, 15/01/2021</h5>
+      <h2 id=inkscape>Imagen svg</h2>
+      <h5>Primer uso de Inkscape, 15/01/2021</h5>
             <svg
              xmlns:dc="http://purl.org/dc/elements/1.1/"
              xmlns:cc="http://creativecommons.org/ns#"
