--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <a class="nav-link active" href="https://github.com/">Github</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Nada</a>
+          <a class="nav-link" href="https://inkscape.org/es/">Inkscape</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Nada</a>
