--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     background: #aaa;
   }
   </style>
+  <link rel="alternate" type="application/rss+xml" title="Suscríbete a la web" href="./RSS.xml" />
 </head>
 
 <body>
